チャットを表示するチャンネルを選択できるように。チャンネル検索機能を追加。その他もろもろの修正。